0.5.5
===================================================
- Added Turkish language(by E.B)
- Added Indonesian language(by Arif Rahman)
- Added French language(by lord_nogard)
- Now the download list is updated just when a
  download is changed, making the program faster,
  and preventing the program to be blocked when
  working with several downloads
- Added a option to add new files on top of the list
- Added support to more segments(until 32)
- Added portable mode(Windows only), which allow the
  program to run directly from pendrives
- Fixed some memory leaks related to the metalink
  class
- Added proxy support(just for HTTP downloads)

0.5.4
===================================================
- The new RipStop theme now is complete
- Added Russian language(by Ruslan Fedyarov)
- Added Hungarian language(by Erno Szabados)
- Added Polish language(by Marcin Trybus)
- Added download status auto save every 10 seconds
- Added option to enable/disable checking for new
  releases
- Fixed problem when the current speed is bigger
  than graph scale
- Fixed several bugs

0.5.3
===================================================
- Added Czech language(by David Vachulka)
- Fixed problem when retriving some metalink files

0.5.2
===================================================
- Added a partial new theme called RipStop
- Now if you try to set as destination a directory
  that don't exists, the program ask to create it
- Fixed some flickering problems on the graph and
  the progress bar
- Added option to execute a custom command when
  some download is finished
- Updated to build with wxWidgets 2.7.1


0.5.1
===================================================
- Added support for multiples files inside metalinks
- Fixed bug when saving graph colors
- Fixed bug when getting file size on FTP servers

0.5.0
===================================================
- Fixed bug when the program access a server and 
  receive a 404 response