@@ -3,6 +3,7 @@
 - Adicionado idioma Turco(by E.B)
 - Adicionado idioma Indonésio(by Arif Rahman)
 - Adicionado idioma Francês(by lord_nogard)
+- Adicionado idioma Holandês(by Rob van den Boorn)
 - Agora a lista de downloads é atualizada apenas
   quando um download é alterado, fazendo com que o
   programa fique mais rápido, e evitando que o pro-
